@@ -8,6 +8,13 @@
     <artifactId>InterviewRecovery</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <junit.version>4.12</junit.version>
+        <cucumber.version>1.2.5</cucumber.version>
+        <selenium.version>3.11.0</selenium.version>
+    </properties>
+
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -18,7 +25,19 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>3.11.0</version>
+            <version>${selenium.version}</version>
+        </dependency>
+    <dependency>
+        <groupId>info.cukes</groupId>
+        <artifactId>cucumber-java</artifactId>
+        <version>${cucumber.version}</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>info.cukes</groupId>
+        <artifactId>cucumber-junit</artifactId>
+        <version>${cucumber.version}</version>
+        <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -33,7 +52,19 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-        </plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.20</version>
+            <configuration>
+                <argLine>-Duser.language=en</argLine>
+                <argLine>-Xmx1024m</argLine>
+                <argLine>-XX:MaxPermSize=256m</argLine>
+                <argLine>-Dfile.encoding=UTF-8</argLine>
+                <useFile>false</useFile>
+            </configuration>
+        </plugin>
+    </plugins>
     </build>
 
 </project>
